--- a/a_read_test/a_read_test.vcxproj.filters
+++ b/a_read_test/a_read_test.vcxproj.filters
@@ -15,19 +15,14 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="assignment_1.c">
+    <ClCompile Include="a.read.main.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="main.c">
+    <ClCompile Include="..\andrew_assign\a.read.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\a_read_test\a.read.c">
+    <ClCompile Include="..\andrew_assign\a.write.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="assignment_1.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
